# scrm

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  Doxyfile  Makefile  Makefile.am  NEWS  NEWS.md  README.md  bootstrap  configure.ac  forest.gaphor  forest.py  oldMakefile  old_jz_forest.cc  old_jz_forest.h  old_jz_model.cc  old_jz_model.h  old_jz_param.cc
doc/: Makefile  Makefile.am  README.md  create-manual.sh  knitr.css  manual.bib  manual.tex  manualcontent.tex  refheader.tex  scrm.1
msdir/: ._ms.c  (+17 more)
src/: Makefile.am  contemporaries_container.h  copy_forest.cc  copy_forest.h  doxygen_notation.txt  event.cc  event.h  forest-debug.cc  forest.cc  forest.h  genetic_map_parser.h  macros.h  model.cc  model.h  model_tmp.h  node.cc  node.h  node_container.cc  node_container.h  param.cc  param.h  printtree.cc  printtree.h  readnewick.cc  readnewick.h  scrm.cc  scrm_omp.cpp  seg.cc  seg.h  time_interval.cc  time_interval.h  tree_point.cc  tree_point.h
src/icsilog/: README  benchmark.c  icsilog.c  icsilog.h
src/random/: constant_generator.cc  constant_generator.h  fastfunc.cc  fastfunc.h  makefile  mersenne_twister.cc  mersenne_twister.h  random_generator.cc  random_generator.h  speedtest.cc
src/summary_statistics/: first_last_tmrca.cc  first_last_tmrca.h  frequency_spectrum.cc  frequency_spectrum.h  fst.cc  fst.h  newick_tree.cc  newick_tree.h  orientedForest.cc  orientedForest.h  oriented_forest.cc  oriented_forest.h  seg_sites.cc  seg_sites.h  summary_statistic.h  tmrca.cc  tmrca.h
tests/: Makefile.am  README  README.md  chisq_r.src  constant_pop_size_many_epoch.sh  fun_src.r  ms_first_vs_last.sh  ms_vs_scrm-SEG.sh  ms_vs_scrm-bl.sh  ms_vs_scrm-mig-popsize.sh  ms_vs_scrm-mig.sh  ms_vs_scrm-mig_more.sh  ms_vs_scrm-mig_more_recomb.sh  ms_vs_scrm-mig_recomb.sh  ms_vs_scrm-prune-tmrca.sh  ms_vs_scrm-prune_mig_recomb.sh  ms_vs_scrm-recomb-Tifs.sh  ms_vs_scrm-recomb.sh  ms_vs_scrm-seg.sh  ms_vs_scrm-seg_wit_recomb.sh  ms_vs_scrm-tmrca-migration.sh  ms_vs_scrm-tmrca-wit-recomb.sh  ms_vs_scrm-tmrca-wit-recomb_Tifs.sh  ms_vs_scrm-tmrca.sh  ms_vs_scrm-topofreq.sh  ms_vs_scrm.sh  ms_vs_scrm_1st_last_tmrca_2sample.sh  ms_vs_scrm_SEG_samplestats.sh  ms_vs_scrm_growth-recomb.sh  ms_vs_scrm_growth.sh  ms_vs_scrm_last_tmrca-wit-recomb.sh  ms_vs_scrm_pop_struct.sh  ms_vs_scrm_subpop_struct.sh  mysample_stats.c  pairwise_test.sh  process_sample_stats.src  spectrum-wit-recomb.sh  spectrum.sh  test-coverage-local.sh  testScrmWithMs.sh  (+15 more)
tests/LD/: Untitled0.ipynb  alldata.txt  ld_test.py
tests/LD/cluster/: 1Pop20sample.par  1Pop6sample.par  Constantpopsizefastsimcoal_Processed  Constantpopsizefastsimcoal_time  Constantpopsizefastsimcoal_tmrcaRho  Constantpopsizemacs_time  Constantpopsizemacs_tmrcaRho  Constantpopsizemacsretain100000_Processed  Constantpopsizemacsretain100000_time  Constantpopsizemacsretain100000_tmrcaRho  Constantpopsizemacsretain10000_Processed  Constantpopsizemacsretain10000_time  Constantpopsizemacsretain10000_tmrcaRho  Constantpopsizemacsretain1000_Processed  Constantpopsizemacsretain1000_time  Constantpopsizemacsretain1000_tmrcaRho  Constantpopsizemacsretain30000_Processed  Constantpopsizemacsretain3000_Processed  Constantpopsizemacsretain50000_Processed  Constantpopsizemacsretain5000_Processed  Constantpopsizemacsretain500_Processed  Constantpopsizemacsretain70000_Processed  Constantpopsizemacsretain7000_Processed  Constantpopsizems_Processed  Constantpopsizems_time  Constantpopsizems_tmrcaRho  Constantpopsizeparam  Constantpopsizescrmwindow0_Processed  Constantpopsizescrmwindow0_time  Constantpopsizescrmwindow0_tmrcaRho  Constantpopsizescrmwindow100000_Processed  Constantpopsizescrmwindow100000_time  Constantpopsizescrmwindow100000_tmrcaRho  Constantpopsizescrmwindow10000_time  Constantpopsizescrmwindow10000_tmrcaRho  Constantpopsizescrmwindow1000_Processed  Constantpopsizescrmwindow1000_time  Constantpopsizescrmwindow1000_tmrcaRho  Constantpopsizescrmwindow30000_Processed  Constantpopsizescrmwindow30000_time  (+58 more)
tests/LD/cluster/6sample_processed/: Constantpopsizemacsretain10000_Processed  Constantpopsizems_Processed  Constantpopsizescrmwindow100000_Processed  Constantpopsizescrmwindow1000_Processed  Constantpopsizescrmwindow50000_Processed  Constantpopsizescrmwindow5000_Processed  Constantpopsizescrmwindow500_Processed
tests/LD/cluster/Divergence_test/: Dsubmit_ms.sh  Dsubmit_scrm0.sh
tests/LD/cluster/LD2E4/: Constantpopsizemacsretain0_Processed  Constantpopsizemacsretain10000_Processed  Constantpopsizemacsretain3000_Processed  Constantpopsizemacsretain5000_Processed  Constantpopsizemacsretain7000_Processed  Constantpopsizems_Processed  Constantpopsizescrmwindow10000_Processed  Constantpopsizescrmwindow1000_Processed  Constantpopsizescrmwindow30000_Processed  Constantpopsizescrmwindow5000_Processed  Constantpopsizescrmwindow500_Processed  (+2 more)
tests/algorithmtest/: test_algorithm.cc
tests/cppunit/: test_runner.cc  test_template.cc
tests/manualtests/: README  bl_r.src  ksTest.r  ks_r.src  ms_vs_scrm-bl.sh  ms_vs_scrm-mig.sh  ms_vs_scrm-mig_more_recomb.sh  ms_vs_scrm-recomb.sh  ms_vs_scrm-seg.sh  ms_vs_scrm-seg_wit_recomb.sh  ms_vs_scrm_growth-recomb.sh  ms_vs_scrm_pop_struct.sh  ms_vs_scrm_subpop_struct.sh  pairwise_test.sh  process_sample_stats.src  scrm_first_vs_last.sh  scrm_prune_vs_ms.sh  spectrum.sh  tmrcaMoments.r
tests/manualtests/LD/: Untitled0.ipynb
tests/manualtests/pruning_test/: grep_stats.sh  printing_table.r  prune_test_top_script.sh  r_tests.r  scrm_sim.sh  test.sh
tests/pruning_test/: compute_moment.py  grep_stats.sh  ms_sim.sh  parameters  process_data.py  r_tests.r  scrm_sim.sh  scrmfull_prune_sim.sh  scrmprune10000_sim.sh  scrmprune50000_sim.sh  scrmprune_sim.sh
tests/test_read_init/: 3tax_gt  4tax_gt  bl_r.src  chisq_r.src  ks_r.src  process_sample_stats.src  scrm_vs_scrmInitialtree.sh  tmrca_r.src
tests/unittests/: test_contemporaries_container.cc  test_fastfunc.cc  test_forest.cc  test_model.cc  test_node.cc  test_node_container.cc  test_param.cc  test_random_generator.cc  test_seg.cc  test_summary_statistics.cc  test_time_interval.cc
(+108 files in other folders)
